[package]
name = "test_native_db"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"] }
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
csv = "1.3.0"
uuid = { version = "1.6.1", features = ["serde", "v7"] }
native_db = "0.5.1"
native_model = "0.4.3"
image = "0.24.7"
rayon = "1.8.0"
